--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -32,5 +32,5 @@ action-bar-when-trampled: false
 # Leave blank for no action bar
 trample-action-bar: "&4[&l!&4] &cYou cannot do that here! &4[&l!&4]"
 
-# Want to suggest more features? Make an issue on the GitHub!
+# Want to suggest more features or just having a problem? Make an issue on the GitHub!
 # https://github.com/hotpocket184/FarmEss/issues
